--- a/src/css/app.css
+++ b/src/css/app.css
@@ -13,41 +13,41 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0;
   color: #cacaca;
   font-weight: normal;
   font-size: 18px;
   font-family: "Roboto", sans-serif;
   line-height: 27px;
   background-color: #08020d;
-  margin: 0;
-  padding: 0;
 }
 
 h1 {
-  font-size: 60px;
-  line-height: 90px;
   font-weight: bold;
   text-transform: uppercase;
+  font-size: 60px;
+  line-height: 90px;
 }
 
 h2 {
-  font-size: 38px;
-  line-height: 57px;
   font-weight: bold;
   text-transform: uppercase;
+  font-size: 38px;
+  line-height: 57px;
 }
 
 h3 {
-  font-size: 24px;
-  line-height: 36px;
   font-weight: normal;
   text-transform: uppercase;
+  font-size: 24px;
+  line-height: 36px;
 }
 
 .container {
   position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
+  width: 1200px;
+  margin: 0 120px;
 }
 
 .btn {
@@ -100,15 +100,17 @@ h3 {
   background-size: cover;
 }
 .bg-header .nav-wrapper {
-  position: absolute;
-  top: -200px;
-  left: 0;
-  width: 1200px;
+  margin: 0;
+  padding: 0;
   padding-top: 25px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
+  position: absolute;
+  top: -200px;
+  left: 0;
+  width: 1200px;
   text-transform: uppercase;
 }
 .bg-header .nav-wrapper .nav-element {
@@ -178,13 +180,12 @@ h3 {
 }
 
 .page-description {
-  padding-left: 10px;
   color: #fff;
   text-align: center;
 }
 .page-description .title {
-  margin-top: 8px;
-  margin-bottom: 0;
+  margin: 0;
+  padding: 0;
 }
 .page-description .title-2 {
   margin-top: 0;
@@ -238,8 +239,8 @@ h3 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    left: 20px;
     top: -250px;
+    left: 20px;
     width: 374px;
   }
   .bg-header .nav-wrapper .nav-element {
@@ -719,6 +720,7 @@ h3 {
 }
 .bg-header-artist .page-description .line-btns {
   margin-top: 47px;
+  margin-bottom: 25px;
   text-align: left;
 }
 .bg-header-artist .page-description .line-btns .btn-artist {
@@ -763,19 +765,12 @@ h3 {
 }
 
 @media screen and (max-width: 414px) {
-  .bg-header-artist .page-description {
-    margin-top: -25px;
-    margin-left: 10px;
-  }
   .bg-header-artist .page-description .artist-title {
     margin: 0;
     padding: 0;
   }
   .bg-header-artist .page-description .header-text {
     margin-top: 15px;
-  }
-  .bg-header-artist .page-description .line-btns {
-    padding-bottom: 25px;
   }
   .bg-header-artist .page-description .line-btns .btn-violet {
     margin-bottom: 22px;
