--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -82,7 +82,8 @@ h3 {
     position: relative;
 
     box-sizing: border-box;
-    width: 100%;
+    width: 414px;
+    margin: 0 auto;
     padding: 0 20px;
   }
 
