--- a/src/css/app.css
+++ b/src/css/app.css
@@ -232,15 +232,11 @@ h3 {
 }
 
 @media screen and (max-width: 414px) {
-  .bg-header {
-    padding-top: 250px;
-  }
   .bg-header .nav-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    top: -250px;
     left: 20px;
     width: 374px;
   }
@@ -267,6 +263,7 @@ h3 {
   .page-description .title {
     margin: 0;
     padding: 0;
+    margin-top: 50px;
   }
   .page-description .welcome-text {
     margin-top: 15px;
@@ -707,7 +704,7 @@ h3 {
   text-align: left;
 }
 .bg-header-artist .page-description .artist-title {
-  margin-top: 55px;
+  margin-top: 15px;
   margin-bottom: 0;
 }
 .bg-header-artist .page-description .header-text {
@@ -763,6 +760,9 @@ h3 {
 }
 
 @media screen and (max-width: 414px) {
+  .bg-header-artist .page-description {
+    margin-top: 25px;
+  }
   .bg-header-artist .page-description .artist-title {
     margin: 0;
     padding: 0;
