--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -170,11 +170,8 @@
 
 @media screen and (max-width: 414px) {
   .bg-header {
-    padding-top: 250px;
-
     .nav-wrapper {
       @include flex-column-start;
-      top: -250px;
       left: 20px;
 
       width: 374px;
@@ -205,6 +202,7 @@
   .page-description {
     .title {
       @include mp-0;
+      margin-top: 50px;
     }
 
     .welcome-text {
