--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -52,9 +52,9 @@ h3 {
 .container {
   position: relative;
 
-  width: 1200px;
+  max-width: 1200px;
 
-  margin: 0 120px;
+  margin: 0 auto;
 }
 
 .btn {
@@ -83,7 +83,6 @@ h3 {
 
     box-sizing: border-box;
     width: 414px;
-    margin: 0 auto;
     padding: 0 20px;
   }
 
