--- a/src/css/app.css
+++ b/src/css/app.css
@@ -44,6 +44,11 @@ h3 {
   line-height: 36px;
 }
 
+section {
+  max-width: 1240px;
+  padding: 0 20px;
+}
+
 .container {
   position: relative;
   max-width: 1200px;
