--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -49,6 +49,11 @@ h3 {
   line-height: nth($desktop-title-line-heights, 4);
 }
 
+section {
+  max-width: 1240px;
+  padding: 0 20px;
+}
+
 .container {
   position: relative;
 
