--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -22,6 +22,8 @@ html {
 
 body {
   @include mp-0;
+  width: 100%;
+
   color: nth($main-colors, 2);
   font-weight: normal;
   font-size: nth($text-sizes, 7);
@@ -49,18 +51,13 @@ h3 {
   line-height: nth($desktop-title-line-heights, 4);
 }
 
-section {
-  max-width: 1240px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .container {
   position: relative;
 
-  max-width: 1200px;
+  max-width: 1240px;
 
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .btn {
@@ -85,11 +82,7 @@ section {
 
 @media screen and (max-width: 414px) {
   .container {
-    position: relative;
-
-    box-sizing: border-box;
-    width: 414px;
-    padding: 0 20px;
+    max-width: 414px;
   }
 
   h1 {
