--- a/src/css/app.css
+++ b/src/css/app.css
@@ -287,7 +287,8 @@ h3 {
 .page-pricing .title-pricing {
   margin: 0;
   padding: 0;
-  margin-bottom: 50px;
+  margin-top: 8px;
+  margin-bottom: 48px;
   text-align: center;
 }
 .page-pricing .catalog-wrapper {
@@ -323,7 +324,7 @@ h3 {
   text-align: center;
 }
 .page-pricing .catalog-wrapper .pricing-item .pricing-value {
-  margin-bottom: 40px;
+  margin-bottom: 38px;
   font-size: 32px;
   line-height: 48px;
   display: flex;
