--- a/src/css/app.css
+++ b/src/css/app.css
@@ -47,6 +47,7 @@ h3 {
 
 .container {
   position: relative;
+  box-sizing: border-box;
   max-width: 1240px;
   margin: 0 auto;
   padding: 0 20px;
@@ -282,17 +283,12 @@ h3 {
   }
 }
 .page-pricing {
-  max-width: 1200px;
-  margin: 0;
-  padding: 0;
-  margin: 0 auto;
   padding-top: 100px;
 }
 .page-pricing .title-pricing {
   margin: 0;
   padding: 0;
-  margin-top: 8px;
-  margin-bottom: 48px;
+  margin-bottom: 50px;
   text-align: center;
 }
 .page-pricing .catalog-wrapper {
@@ -328,7 +324,7 @@ h3 {
   text-align: center;
 }
 .page-pricing .catalog-wrapper .pricing-item .pricing-value {
-  margin-bottom: 38px;
+  margin-bottom: 40px;
   font-size: 32px;
   line-height: 48px;
   display: flex;
