--- a/src/css/app.css
+++ b/src/css/app.css
@@ -402,6 +402,8 @@ h3 {
   text-align: center;
 }
 .page-news .title-2 {
+  margin: 0;
+  padding: 0;
   margin-bottom: 50px;
 }
 .page-news .newses {
