--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -4,6 +4,7 @@
   text-align: center;
 
   .title-2 {
+    @include mp-0;
     margin-bottom: 50px;
   }
 
@@ -85,7 +86,6 @@
 
       .second-wrapper {
         width: 575px;
-        
       }
     }
 
