--- a/src/css/app.css
+++ b/src/css/app.css
@@ -495,6 +495,9 @@ h3 {
 }
 
 @media screen and (max-width: 414px) {
+  .page-news .title-2 {
+    margin-bottom: 48px;
+  }
   .page-news .newses .news-item {
     display: flex;
     flex-direction: column;
