--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -125,14 +125,14 @@
 
         .first-wrapper,
         .second-wrapper {
-          width: 100%;
+          width: 374px;
           margin-right: 0;
           margin-left: 0;
         }
       }
 
       .news-item:first-of-type {
-        margin-bottom: 73px;
+        margin-bottom: 65px;
       }
     }
   }
