--- a/src/css/app.css
+++ b/src/css/app.css
@@ -579,13 +579,13 @@ h3 {
     padding: 0;
     order: 2;
     width: 374px;
-    margin-top: -35px;
   }
   .page-app .app-wrapper .img-app {
     margin: 0;
     padding: 0;
     order: 1;
-    width: 100%;
+    width: 333px;
+    margin: 0 auto;
   }
 }
 .page-footer {
