--- a/src/scss/page-app.scss
+++ b/src/scss/page-app.scss
@@ -51,13 +51,13 @@
         @include mp-0;
         order: 2;
         width: 374px;
-        margin-top: -35px;
       }
 
       .img-app {
         @include mp-0;
         order: 1;
-        width: 100%;
+        width: 333px;
+        margin: 0 auto;
       }
     }
   }
