--- a/src/css/app.css
+++ b/src/css/app.css
@@ -604,6 +604,9 @@ h3 {
   justify-content: flex-start;
 }
 .page-footer .footer-lists .footer-wrapper .footer-items .item-title {
+  margin: 0;
+  padding: 0;
+  width: 270px;
   margin-bottom: 14px;
   color: #fff;
   font-weight: bold;
