--- a/src/css/app.css
+++ b/src/css/app.css
@@ -607,6 +607,7 @@ h3 {
   margin: 0;
   padding: 0;
   width: 270px;
+  margin-top: 7px;
   margin-bottom: 14px;
   color: #fff;
   font-weight: bold;
@@ -620,6 +621,7 @@ h3 {
 .page-footer .footer-lists .footer-wrapper .footer-items .footer-list {
   margin: 0;
   padding: 0;
+  margin-bottom: 20px;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
@@ -664,6 +666,7 @@ h3 {
   justify-content: flex-start;
   margin: 0;
   padding: 0;
+  margin-top: 4px;
   list-style: none;
 }
 .page-footer .footer-main .footer-main-list .footer-main-item {
