--- a/src/css/app.css
+++ b/src/css/app.css
@@ -667,6 +667,7 @@ h3 {
   margin: 0;
   padding: 0;
   margin-top: 4px;
+  margin-bottom: 10px;
   list-style: none;
 }
 .page-footer .footer-main .footer-main-list .footer-main-item {
