--- a/src/css/app.css
+++ b/src/css/app.css
@@ -690,11 +690,11 @@ h3 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding-top: 60px;
-    padding-bottom: 67px;
+    margin-top: 10px;
+    margin-bottom: 12px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items {
-    margin-top: 30px;
+    margin-top: 10px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items .item-title {
     margin: 0;
@@ -703,6 +703,9 @@ h3 {
   }
   .page-footer .footer-lists .footer-wrapper .footer-items:first-of-type {
     margin-top: 0;
+  }
+  .page-footer .footer-main {
+    padding-left: 20px;
   }
   .page-footer .footer-main .footer-main-list {
     display: flex;
