--- a/src/css/app.css
+++ b/src/css/app.css
@@ -685,6 +685,9 @@ h3 {
 }
 
 @media screen and (max-width: 414px) {
+  .page-footer {
+    width: 414px;
+  }
   .page-footer .footer-lists .footer-wrapper {
     display: flex;
     flex-direction: column;
@@ -694,7 +697,6 @@ h3 {
     margin-bottom: 12px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items {
-    width: 373px;
     margin-top: 10px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items .item-title {
@@ -707,6 +709,7 @@ h3 {
   }
   .page-footer .footer-main {
     padding-left: 20px;
+    padding-right: 20px;
   }
   .page-footer .footer-main .footer-main-list {
     display: flex;
@@ -715,7 +718,6 @@ h3 {
     justify-content: flex-start;
   }
   .page-footer .footer-main .footer-main-list .footer-main-item {
-    width: 373px;
     margin-top: 16px;
   }
   .page-footer .footer-main .footer-main-list .footer-main-item:first-of-type {
