--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -118,13 +118,25 @@
         margin-bottom: 12px;
 
         .footer-items {
-          width: 374px;
           margin-top: 10px;
 
           .item-title {
             @include mp-0;
-            width: 374px;
             margin-bottom: 16px;
+          }
+
+          .footer-list-full {
+            width: 374px;
+          }
+
+          .footer-list {
+            .footer-adress {
+              width: 374px;
+            }
+
+            .footer-auto {
+              width: auto;
+            }
           }
         }
 
