--- a/src/css/app.css
+++ b/src/css/app.css
@@ -697,7 +697,6 @@ h3 {
     margin-bottom: 12px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items {
-    width: 374px;
     margin-top: 10px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items .item-title {
@@ -705,6 +704,15 @@ h3 {
     padding: 0;
     width: 374px;
     margin-bottom: 16px;
+  }
+  .page-footer .footer-lists .footer-wrapper .footer-items .footer-list-full {
+    width: 374px;
+  }
+  .page-footer .footer-lists .footer-wrapper .footer-items .footer-list .footer-adress {
+    width: 374px;
+  }
+  .page-footer .footer-lists .footer-wrapper .footer-items .footer-list .footer-auto {
+    width: auto;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items:first-of-type {
     margin-top: 0;
