--- a/src/css/app.css
+++ b/src/css/app.css
@@ -697,6 +697,7 @@ h3 {
     margin-bottom: 12px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items {
+    width: 374px;
     margin-top: 10px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items .item-title {
@@ -705,7 +706,12 @@ h3 {
     width: 374px;
     margin-bottom: 16px;
   }
-  .page-footer .footer-lists .footer-wrapper .footer-items .footer-list-full {
+  .page-footer .footer-lists .footer-wrapper .footer-items .footer-list-full .footer-item {
+    margin: 0;
+    padding: 0;
+    width: 374px;
+  }
+  .page-footer .footer-lists .footer-wrapper .footer-items .footer-list-full .footer-item .footer-link {
     width: 374px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items .footer-list .footer-adress {
@@ -718,8 +724,8 @@ h3 {
     margin-top: 0;
   }
   .page-footer .footer-main {
-    padding-left: 20px;
     padding-right: 20px;
+    padding-left: 20px;
   }
   .page-footer .footer-main .footer-main-list {
     display: flex;
