--- a/src/css/app.css
+++ b/src/css/app.css
@@ -693,18 +693,23 @@ h3 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-top: 10px;
-    margin-bottom: 12px;
+    margin-bottom: 17px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items {
     width: 374px;
-    margin-top: 10px;
+    margin-top: 9px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items .item-title {
     margin: 0;
     padding: 0;
     width: 374px;
     margin-bottom: 16px;
+  }
+  .page-footer .footer-lists .footer-wrapper .footer-items .footer-social {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items .footer-list .footer-item {
     margin: 0;
@@ -715,7 +720,7 @@ h3 {
     width: 374px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items:first-of-type {
-    margin-top: 0;
+    margin-top: 9px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items:nth-child(3) .footer-list .footer-mail {
     width: 122px;
