--- a/src/css/app.css
+++ b/src/css/app.css
@@ -693,7 +693,7 @@ h3 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-bottom: 20px;
+    margin-bottom: 17px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items {
     width: 374px;
@@ -724,9 +724,11 @@ h3 {
   }
   .page-footer .footer-lists .footer-wrapper .footer-items:nth-child(3) .footer-list .footer-mail {
     width: 122px;
+    margin-bottom: 1px;
   }
   .page-footer .footer-lists .footer-wrapper .footer-items:nth-child(3) .footer-list .footer-phone {
     width: 130px;
+    margin-top: 1px;
   }
   .page-footer .footer-main {
     padding-right: 20px;
