--- a/src/scss/artist-header.scss
+++ b/src/scss/artist-header.scss
@@ -38,6 +38,7 @@
         line-height: nth($text-line-heights, 9);
 
         text-align: left;
+        text-transform: uppercase;
       }
 
       .btn-violet {
