--- a/src/css/app.css
+++ b/src/css/app.css
@@ -774,12 +774,7 @@ h3 {
   position: relative;
   box-sizing: border-box;
   width: 200px;
-  padding-left: 30px;
-}
-.bg-header-artist .page-description .line-btns .btn-artist .btn-text {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
+  padding: 20px 30px;
   color: #fff;
   font-weight: normal;
   font-size: 12.8px;
@@ -787,20 +782,25 @@ h3 {
   text-align: left;
   text-transform: uppercase;
 }
+.bg-header-artist .page-description .line-btns .btn-artist .btn-text {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
 .bg-header-artist .page-description .line-btns .btn-violet {
   margin-right: 27px;
   background-color: #5328a1;
 }
 .bg-header-artist .page-description .line-btns .btn-violet .btn-text {
-  margin-top: -2px;
-  margin-left: -12px;
+  margin-top: -15px;
+  margin-left: 42px;
 }
 .bg-header-artist .page-description .line-btns .btn-orange {
   background-color: #95390c;
 }
 .bg-header-artist .page-description .line-btns .btn-orange .btn-text {
-  margin-top: -6px;
-  margin-left: 22px;
+  margin-top: -15px;
+  margin-left: 35px;
 }
 .bg-header-artist .page-description .line-btns .btn-violet::before {
   position: absolute;
