--- a/src/css/app.css
+++ b/src/css/app.css
@@ -837,7 +837,14 @@ h3 {
     margin-top: 18px;
   }
   .bg-header-artist .page-description .line-btns .btn-violet {
-    margin-bottom: 22px;
+    margin-bottom: 25px;
+  }
+  .bg-header-artist .page-description .line-btns .btn-violet .btn-text {
+    margin-left: 35px;
+  }
+  .bg-header-artist .page-description .line-btns .btn-violet::before {
+    top: 20px;
+    left: 30px;
   }
 }
 .page-popular-track {
