--- a/src/scss/artist-header.scss
+++ b/src/scss/artist-header.scss
@@ -101,7 +101,15 @@
 
       .line-btns {
         .btn-violet {
-          margin-bottom: 22px;
+          margin-bottom: 25px;
+          .btn-text {
+            margin-left: 35px;
+          }
+        }
+
+        .btn-violet::before {
+          top: 20px;
+          left: 30px;
         }
       }
     }
