--- a/src/css/app.css
+++ b/src/css/app.css
@@ -834,7 +834,10 @@ h3 {
     padding: 0;
   }
   .bg-header-artist .page-description .header-text {
-    margin-top: 20px;
+    margin-top: 16px;
+  }
+  .bg-header-artist .page-description .line-btns .btn-artist {
+    width: 180px;
   }
   .bg-header-artist .page-description .line-btns .btn-violet {
     margin-bottom: 23px;
