--- a/src/scss/artist-header.scss
+++ b/src/scss/artist-header.scss
@@ -95,10 +95,13 @@
       }
 
       .header-text {
-        margin-top: 20px;
+        margin-top: 16px;
       }
 
       .line-btns {
+        .btn-artist {
+          width: 180px;
+        }
         .btn-violet {
           margin-bottom: 23px;
 
